# AandGAnalytics

./: .eslintrc.cjs  .gitignore  Cargo.toml  package.json
.github/workflows/: ci.yml
crates/ag_analytics/: Cargo.toml
crates/ag_analytics/src/: attribution.rs  bottleneck.rs  changelog.rs  error.rs  events.rs  flow.rs  lib.rs  performance.rs  rebuild.rs  sprint.rs  throughput.rs
crates/ag_bedrock/: Cargo.toml
crates/ag_bedrock/src/: client.rs  context.rs  error.rs  lib.rs
crates/ag_credentials/: Cargo.toml
crates/ag_credentials/src/: lib.rs  store.rs
crates/ag_db/: Cargo.toml
crates/ag_db/src/: connection.rs  lib.rs  migrate.rs  schema.sql
crates/ag_gemini/: Cargo.toml
crates/ag_gemini/src/: client.rs  context.rs  error.rs  lib.rs
crates/ag_jira/: Cargo.toml
crates/ag_jira/src/: client.rs  error.rs  lib.rs  types.rs
crates/ag_jira/tests/fixtures/: boards.json  fields.json  myself.json  search_page1.json  search_page2.json
crates/ag_risk/: Cargo.toml
crates/ag_risk/src/: error.rs  forecast.rs  lib.rs  rebuild.rs  score.rs
crates/ag_sync/: Cargo.toml
crates/ag_sync/src/: checkpoint.rs  engine.rs  error.rs  fake.rs  lib.rs  progress.rs
crates/ag_sync/tests/fixtures/: projects.json  sprint_issues.json  sprints.json
docs/release/: install.md  macos.md  windows.md
docs/superpowers/plans/: 2026-07-23-insights-dashboard-ui.md  2026-07-23-jira-analytics-desktop.md  2026-07-23-performance-analytics-ui.md
docs/superpowers/specs/: 2026-07-23-insights-dashboard-ui-design.md  2026-07-23-jira-analytics-desktop-design.md  2026-07-23-performance-analytics-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scheduler.rs  state.rs
src-tauri/src/commands/: ai.rs  maintenance.rs  metrics.rs  mod.rs  setup.rs  sync.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.test.tsx  App.tsx  main.tsx  styles.css
ui/src/components/: ContextPackPreview.tsx  DashboardNav.tsx  FilterBar.test.tsx  FilterBar.tsx  MetricChart.tsx  SecretField.tsx  SyncBanner.test.tsx  SyncBanner.tsx
ui/src/lib/: format.ts  syncErrors.ts  tauri.ts
ui/src/pages/: AskAiPage.test.tsx  AskAiPage.tsx  EpicsPage.test.tsx  EpicsPage.tsx  ExplorePage.test.tsx  ExplorePage.tsx  FlowPage.test.tsx  FlowPage.tsx  HomePage.test.tsx  HomePage.tsx  PerformancePage.test.tsx  PerformancePage.tsx  SetupPage.test.tsx  SetupPage.tsx  SprintsPage.test.tsx  SprintsPage.tsx  SyncPage.test.tsx  SyncPage.tsx
