[package]
name = "aandg-analytics-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "aandg-analytics"
path = "src/main.rs"

[lib]
name = "aandg_analytics_tauri"
path = "src/lib.rs"

[features]
default = []
# Full desktop shell (webview / native). Enable with `--features desktop`.
# Kept optional so `cargo test --workspace` stays green without Tauri system deps (e.g. CI).
desktop = ["dep:tauri", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2", optional = true , features = [] }

[dependencies]
ag_analytics = { path = "../crates/ag_analytics" }
ag_credentials = { path = "../crates/ag_credentials" }
ag_db = { path = "../crates/ag_db" }
ag_bedrock = { path = "../crates/ag_bedrock" }
ag_jira = { path = "../crates/ag_jira" }
ag_risk = { path = "../crates/ag_risk" }
ag_sync = { path = "../crates/ag_sync" }
chrono = { version = "=0.4.38", default-features = false, features = ["clock", "std", "serde"] }
dirs = "5.0.1"
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tauri = { version = "2", optional = true , features = [] }
tokio = { version = "=1.40.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "=3.14.0"
