[package]
name = "ag_risk"
version = "0.1.0"
edition.workspace = true

[dependencies]
ag_db = { path = "../ag_db" }
chrono = { version = "=0.4.38", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.151"
thiserror = "2.0.19"

[dev-dependencies]
tempfile = "=3.14.0"
