[package]
name = "ag_sync"
version = "0.1.0"
edition.workspace = true

[dependencies]
ag_credentials = { path = "../ag_credentials" }
ag_db = { path = "../ag_db" }
ag_jira = { path = "../ag_jira" }
chrono = { version = "=0.4.38", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.151"
thiserror = "2.0.19"

[dev-dependencies]
tempfile = "=3.14.0"
tokio = { version = "=1.40.0", features = ["macros", "rt-multi-thread"] }
